[tool.poetry]
name = "poetry-version"
version = "0.2.0"
description = "Python library for extracting version from poetry pyproject.toml file (deprecated)"
authors = ["Roman Inflianskas <infroma@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["poetry", "version"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/rominf/poetry-version"

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"
tomlkit = "^0.4.6 || ^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
